# myllm

./: README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  llama_bridge.cpp
android/app/src/main/kotlin/com/example/myllm/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/config/: theme.dart
lib/layout/: shell.dart  side_nav_bar.dart
lib/llm/: llama_ffi.dart  llama_worker.dart  llm_service.dart
lib/models/: chat_message.dart  model_metadata.dart
lib/screens/: chat_history_screen.dart  chat_screen.dart  model_manager_screen.dart  profile_screen.dart
lib/services/: chat_storage.dart  file_naming.dart  model_downloader.dart
lib/state/: model_provider.dart
lib/widgets/: input_bar.dart  message_bubble.dart  model_tile.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
